RESOLVED FIXED13251
editing/style/fontsize-1.html fails intermittently when run multiple times on Intel, generates incorrect DOM
https://bugs.webkit.org/show_bug.cgi?id=13251
Summary editing/style/fontsize-1.html fails intermittently when run multiple times on...
mitz
Reported 2007-04-01 07:41:52 PDT
On a debug build of TOT running on an Intel machine, "run-webkit-tests editing/style/fontsize-1.html editing/style/fontsize-1.html editing/style/fontsize-1.html editing/style/fontsize-1.html editing/style/fontsize-1.html" fails one or more instances of the test sometimes. Even when the test passes, when opened in Safari one can see that the DOM tree includes FONT elements with size="1" (or in the failing case, one of them has size="7"; neither size is correct, and the actual size is determined by an inline style attribute on a child SPAN). Patch forthcoming.
Attachments
Don't generate 'size' attribute for relative font sizes, and ASSERT on wildly illegal conversions (14.28 KB, patch)
2007-04-01 08:07 PDT, mitz
darin: review+
mitz
Comment 1 2007-04-01 08:07:34 PDT
Created attachment 13914 [details] Don't generate 'size' attribute for relative font sizes, and ASSERT on wildly illegal conversions
Darin Adler
Comment 2 2007-04-02 07:59:38 PDT
Comment on attachment 13914 [details] Don't generate 'size' attribute for relative font sizes, and ASSERT on wildly illegal conversions I'd prefer not to have ad-hoc comparisons of the unit type with values. All the < PX, > PC, <= CSS_DIMENSION is quite unclear and should be done with helper inline functions instead. But for this fix, r=me
Mark Rowe (bdash)
Comment 3 2007-04-03 06:13:25 PDT
Landed in r20678.
Note You need to log in before you can comment on or make changes to this bug.